--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,7 +19,7 @@
       />
 
       <button
-        class="border border-2 font-bold border-slate-500 rounded-md bg-slate-400 p-2 text-slate-800"
+        class="border-2 font-bold border-slate-500 rounded-md bg-slate-400 p-2 text-slate-800"
         type="submit"
       >Login</button>
 
@@ -52,7 +52,7 @@
       />
 
       <button
-        class="border border-2 font-bold border-slate-500 rounded-md bg-slate-400 p-2 text-slate-800"
+        class="border-2 font-bold border-slate-500 rounded-md bg-slate-400 p-2 text-slate-800"
         type="submit"
       >Sign up</button>
 
