user login/logout routes, and username in chat

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -53,7 +53,7 @@
       </main>
     </div>
     {{#if logged_in}}
-      {{! <script src="/js/logout.js"></script> }}
+      <script src="/js/logout.js"></script>
     {{/if}}
 
     <script src="/socket.io/socket.io.js"></script>
