--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,6 +8,7 @@
       class="w-full transform border-b-2 bg-transparent text-lg duration-300 focus-within:border-indigo-500"
     >
       <input
+        id="email-login"
         type="text"
         placeholder="Email or Username"
         class="w-full border-none bg-transparent outline-none placeholder:italic focus:outline-none"
@@ -18,6 +19,7 @@
       class="w-full transform border-b-2 bg-transparent text-lg duration-300 focus-within:border-indigo-500"
     >
       <input
+        id="password-login"
         type="password"
         placeholder="Password"
         class="w-full border-none bg-transparent outline-none placeholder:italic focus:outline-none"
@@ -25,6 +27,7 @@
     </div>
 
     <button
+      id="login"
       class="transform rounded-sm bg-indigo-600 py-2 font-bold duration-300 hover:bg-indigo-400"
     >
       LOG IN
@@ -72,3 +75,5 @@
 
   </section>
 </main>
+
+<script src="js/login.js"></script>
