--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -52,7 +52,7 @@
     >
       <input
         type="text"
-        placeholder="Email or Username"
+        placeholder="Email"
         class="w-full border-none bg-transparent outline-none placeholder:italic focus:outline-none"
       />
     </div>
