--- a/views/testing.handlebars
+++ b/views/testing.handlebars
@@ -1,3 +1,10 @@
-<div class="flex flex-row gap-x-64 justify-center">
-  <h2 class="text-2xl text-slate-300">Really cool homepage wow</h2>
+<div class="flex flex-col justify-center items-center">
+    <h2 class="text-2xl text-slate-300">Really cool homepage wow</h2>
+  <div class="flex flex-col gap-x-64 justify-center mt-4 w-3/12">
+    <input id="chatTitle" type="text" />
+    <button
+      id="newChat"
+      class="text-lg text-slate-300 p-3 mt-4 bg-slate-500 rounded-sm"
+    >Create a chat</button>
+  </div>
 </div>
