--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
       <input
         id="email-login"
         type="text"
-        placeholder="Email or Username"
+        placeholder="Email"
         class="w-full border-none bg-transparent outline-none placeholder:italic focus:outline-none"
       />
     </div>
