--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -9,3 +9,11 @@
 .show {
   display: block;
 }
+
+.chatspace {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+}
