--- a/views/testing.handlebars
+++ b/views/testing.handlebars
@@ -1,3 +1,3 @@
 <div class="flex flex-row gap-x-64 justify-center">
-  <h2 class="text-2xl text-slate-300">Really cool homepage wow</h2>
+  <h2 class="text-2xl text-slate-300"></h2>
 </div>
