barebones create blog with tag, routes and model

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
         {{else}}
           <a
             class="transform rounded-sm bg-indigo-600 p-2 font-bold duration-300 hover:bg-indigo-400"
-            href="/testing"
+            href="/login"
           >LOGIN</a>
         {{/if}}
       </nav>
