initial create user works

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -622,6 +622,10 @@ video {
   height: 100%;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
 .min-h-fit {
   min-height: -moz-fit-content;
   min-height: fit-content;
