--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,7 +37,7 @@
     <div class="flex flex-row h-[calc(100vh-8rem)]">
       {{#if logged_in}}
         <aside
-          class="bg-gradient-to-r from-slate-900 via-purple-900 to-slate-900 text-sky-50 rounded-sm h-full w-2/12 flex flex-col items-center"
+          class="h-screen bg-gradient-to-r from-slate-900 via-purple-900 to-slate-900 text-sky-50 rounded-sm h-full w-2/12 flex flex-col items-center"
         >
           {{#each chatrooms as |chatroom|}}
             <a class="chatrooms" id="{{id}}">
