--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -45,15 +45,17 @@
         type="text"
         placeholder="Display Name"
         class="w-full border-none bg-transparent outline-none placeholder:italic focus:outline-none"
+        id="name-signup"
       />
     </div>
     <div
-      class="w-full transform border-b-2 bg-transparent text-lg duration-300 focus-within:border-indigo-500"
+      class=" w-full transform border-b-2 bg-transparent text-lg duration-300 focus-within:border-indigo-500"
     >
       <input
         type="text"
         placeholder="Email"
         class="w-full border-none bg-transparent outline-none placeholder:italic focus:outline-none"
+        id="email-signup"
       />
     </div>
 
@@ -64,10 +66,12 @@
         type="password"
         placeholder="Password"
         class="w-full border-none bg-transparent outline-none placeholder:italic focus:outline-none"
+        id="password-signup"
       />
     </div>
 
     <button
+      id="signup-user"
       class="transform rounded-sm bg-indigo-600 py-2 font-bold duration-300 hover:bg-indigo-400"
     >
       CREATE ACCOUNT
