added username to blog page

--- a/views/partials/chatrooms.handlebars
+++ b/views/partials/chatrooms.handlebars
@@ -16,7 +16,7 @@
         <button class="bg-pink-700 rounded-md p-2 send-message">Send</button>
       </div>
       <div>
-        <button class="bg-slate-600 rounded-md p-2 delChat" data-id={{chatroom.id}}>Leave Room</button>
+        <button class="bg-slate-600 rounded-md p-2 delChat" data-id={{chatroom.id}}>DELETE Room</button>
       </div>
     </div>
   </div>
