--- a/views/testing.handlebars
+++ b/views/testing.handlebars
@@ -1,5 +1,5 @@
 <div class="flex flex-col justify-center items-center">
-  <h2 class="text-2xl text-slate-300">Really cool homepage wow</h2>
+  <h2 class="text-2xl text-slate-300 uppercase">Welcome {{username}}!</h2>
 
   <div class="mt-4">
     <div class="mb-5">
