--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,8 @@
           ><a href="/login">LOGOUT</a></button>
         {{else}}
           <a
-            class="transform rounded-md bg-violet-900 p-2 font-bold duration-300 hover:bg-indigo-400"
+          {{!-- TESTING set button to invisible for login screen --}}
+            class="invisible transform rounded-md bg-violet-900 p-2 font-bold duration-300 hover:bg-indigo-400"
             href="/login"
           >LOGIN</a>
         {{/if}}
@@ -40,8 +41,8 @@
           class="h-screen bg-gradient-to-r from-slate-900 via-purple-900 to-slate-900 text-sky-50 rounded-sm h-full w-2/12 flex flex-col items-center"
         >
           {{#each chatrooms as |chatroom|}}
-            <a class="chatrooms" id="{{id}}">
-              <button class="transform rounded-md bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black p-4 my-5 font-bold duration-300 hover:bg-indigo-400">{{chatroom.title}}</button>
+            <a class="chatrooms w-9/12" id="{{id}}">
+              <button class="w-full transform rounded-md bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black p-4 my-5 font-bold duration-300 hover:bg-indigo-400">{{chatroom.title}}</button>
             </a>
           {{/each}}
         </aside>
