chatroom creation and comment creation bugs

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -111,4 +111,4 @@
 </div>
 
 <script src="../js/comment.js"></script>
-<script src="../js/blog.js"></script>
+<script src="../js/editBlog.js"></script>
