user route, /profile route

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
           <button
             class="rounded-md bg-violet-900 p-2 font-bold duration-300 hover:bg-indigo-400"
           >
-            <a href="/user/{{username}}">PROFILE</a>
+            <a href="/profile">PROFILE</a>
           </button>|
           <button
             class="rounded-md bg-violet-900 p-2 font-bold duration-300 hover:bg-indigo-400"
