user joined chat message, added model hook

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1134,6 +1134,10 @@ video {
   text-transform: uppercase;
 }
 
+.capitalize {
+  text-transform: capitalize;
+}
+
 .leading-relaxed {
   line-height: 1.625;
 }
