--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,7 +45,7 @@
           {{#each chatrooms as |chatroom|}}
             {{#if chatroom.userHasTag}}
             <a class="chatrooms w-9/12" id="{{id}}">
-              <button class="chatTitle transform w-full rounded-md bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black p-4 my-5 font-bold duration-300 hover:bg-indigo-400">{{chatroom.title}}</button>
+              <button class="chatTitle capitalize transform w-full rounded-md bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black p-4 my-5 font-bold duration-300 hover:bg-indigo-400">{{chatroom.title}}</button>
             </a>
             {{/if}}
           {{/each}}
