added testing asset

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -51,7 +51,8 @@
           {{/each}}
         </aside>
       {{/if}}
-      <main class="w-7/12 mx-auto mt-5 max-w-4xl">
+      {{!-- TESTING main look, changed width --}}
+      <main class="w-full mx-auto mt-5">
       <div id="main" class="show">
         {{{body}}}
       </div>
