--- a/views/partials/chatrooms.handlebars
+++ b/views/partials/chatrooms.handlebars
@@ -1,7 +1,7 @@
 {{#each chatrooms as |chatroom|}}
   <div id="chat{{chatroom.id}}" class="hide">
     <h2 class="text-2xl" style="padding-bottom: 1em">{{chatroom.title}}</h2>
-    <div class="screen chat-screen">
+    <div class="screen chat-screen bg-rose-400">
       <div class="header">
         <div class="logo"></div>
         {{!-- icon from heroicons.dev --}}
