--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -3,7 +3,9 @@
 >
   <h2 class="text-2xl font-bold" id="oldBlogTitle">{{title}}</h2>
   <p class="text-sm">Created by
-    <strong>{{user.username}}</strong>
+    <strong>
+      <a href="/user/{{user.username}}/">{{user.username}}</a>
+    </strong>
     on
     {{format_date date_created}}</p>
   <p class="mt-4 font-semibold" id="oldContent">{{content}}</p>
@@ -70,8 +72,7 @@
       </div>
     </form>
   {{else}}
-    <p class="m-4 text-center font-semibold">You must be logged in to leave a
-      comment</p>
+    <p class="m-4 text-center font-semibold">You must be logged in to leave a comment</p>
   {{/if}}
   {{#if comments.length}}
     <div class="commentList">
