added style to chatroom, loginpage

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -17,3 +17,8 @@
   transform: translate(-50%, -50%);
   margin: 0;
 }
+
+.image-container {
+  object-fit: cover;
+  background-image: url(./assets/images/ai-image5.jpg);
+}
