--- a/public/css/style.css
+++ b/public/css/style.css
@@ -630,6 +630,10 @@ video {
   margin-bottom: 0.25rem;
 }
 
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -648,6 +652,10 @@ video {
 
 .ml-1 {
   margin-left: 0.25rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
 }
 
 .ml-auto {
@@ -682,6 +690,14 @@ video {
   margin-top: 1.25rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
 .block {
   display: block;
 }
@@ -710,13 +726,16 @@ video {
   height: 100vh;
 }
 
-.min-h-fit {
-  min-height: -moz-fit-content;
-  min-height: fit-content;
+.h-12 {
+  height: 3rem;
 }
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
 }
 
 .w-2\/12 {
@@ -731,16 +750,16 @@ video {
   width: 1.25rem;
 }
 
+.w-5\/12 {
+  width: 41.666667%;
+}
+
 .w-5\/6 {
   width: 83.333333%;
 }
 
 .w-6\/12 {
   width: 50%;
-}
-
-.w-7\/12 {
-  width: 58.333333%;
 }
 
 .w-9\/12 {
@@ -751,8 +770,20 @@ video {
   width: 100%;
 }
 
-.max-w-4xl {
-  max-width: 56rem;
+.w-12 {
+  width: 3rem;
+}
+
+.w-4\/6 {
+  width: 66.666667%;
+}
+
+.w-1\/6 {
+  width: 16.666667%;
+}
+
+.w-3\/5 {
+  width: 60%;
 }
 
 .max-w-\[430px\] {
@@ -815,11 +846,6 @@ video {
 
 .gap-2 {
   gap: 0.5rem;
-}
-
-.gap-x-24 {
-  -moz-column-gap: 6rem;
-       column-gap: 6rem;
 }
 
 .gap-y-3 {
@@ -892,9 +918,22 @@ video {
   border-width: 2px;
 }
 
+.border-4 {
+  border-width: 4px;
+}
+
+.border-solid {
+  border-style: solid;
+}
+
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-sky-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(14 165 233 / var(--tw-border-opacity));
 }
 
 .border-slate-400 {
@@ -910,6 +949,11 @@ video {
 .border-slate-600 {
   --tw-border-opacity: 1;
   border-color: rgb(71 85 105 / var(--tw-border-opacity));
+}
+
+.border-gray-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(17 24 39 / var(--tw-border-opacity));
 }
 
 .bg-\[\#1e1a36\]\/70 {
@@ -938,6 +982,11 @@ video {
 .bg-pink-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(190 24 93 / var(--tw-bg-opacity));
+}
+
+.bg-sky-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
 }
 
 .bg-slate-300 {
@@ -974,21 +1023,32 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-rose-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 113 133 / var(--tw-bg-opacity));
-}
-
 .bg-\[radial-gradient\(ellipse_at_center\2c _var\(--tw-gradient-stops\)\)\] {
   background-image: radial-gradient(ellipse at center, var(--tw-gradient-stops));
+}
+
+.bg-\[url\(\.\/assets\/images\/ai-image9\.jpg\)\] {
+  background-image: url(./assets/images/ai-image9.jpg);
 }
 
 .bg-\[url\(https\:\/\/neluttu\.github\.io\/pro-profile\/wallpaper\.jpg\)\] {
   background-image: url(https://neluttu.github.io/pro-profile/wallpaper.jpg);
 }
 
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.bg-\[url\(\.\/assets\/images\/ai-image10\.jpg\)\] {
+  background-image: url(./assets/images/ai-image10.jpg);
+}
+
+.bg-\[url\(\.\/assets\/images\/ai-image-10\.jpg\)\] {
+  background-image: url(./assets/images/ai-image-10.jpg);
 }
 
 .from-gray-700 {
@@ -1019,6 +1079,10 @@ video {
 
 .to-slate-900 {
   --tw-gradient-to: #0f172a var(--tw-gradient-to-position);
+}
+
+.bg-cover {
+  background-size: cover;
 }
 
 .p-2 {
@@ -1117,6 +1181,11 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-bold {
@@ -1225,6 +1294,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-green-400 {
+  --tw-text-opacity: 1;
+  color: rgb(74 222 128 / var(--tw-text-opacity));
+}
+
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -1276,6 +1350,12 @@ video {
   left: 50%;
   transform: translate(-50%, -50%);
   margin: 0;
+}
+
+.image-container {
+  -o-object-fit: cover;
+     object-fit: cover;
+  background-image: url(./assets/images/ai-image5.jpg);
 }
 
 .hover\:scale-105:hover {
@@ -1418,6 +1498,14 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:ml-8 {
+    margin-left: 2rem;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
