--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,11 @@
 <main
-  {{!-- class="min-h-fit flex flex-col w-full items-center justify-center text-white gap-x-24" --}}
+    {{!-- TEST bg image for login --}}
+    class="h-screen flex justify-center items-center image-container bg-cover"
 >
 
 {{!-- TESTING  md:h-screen--}}
-<section id="login-card">
-  <div class="mt-10 flex flex-col items-center justify-center px-6 py-8 mx-auto lg:py-0">
+<section id="login-card" class="w-5/12 mb-12">
+  <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto lg:py-0">
       <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
           <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
               <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
@@ -32,7 +33,7 @@
 
 {{!-- Create Account --}}
 {{!-- TESTING create card --}}
-<section id="create-card" class="hidden">
+<section id="create-card" class="hidden w-5/12 mb-12">
   <div class="mt-10 flex flex-col items-center justify-center px-6 py-8 mx-auto lg:py-0">
       <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-violet-900 dark:border-gray-700">
           <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
