--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,19 +9,19 @@
 
   <body class="bg-slate-900 text-gray-300">    
     <header
-      class="flex relative justify-end items-center p-8 bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black">
+      class="flex relative lg:justify-end sm:justify-between items-center p-8 bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black">
       <div class="flex absolute chatspace">
       <h1>
         <a class="text-5xl font-bold text-violet-100" href="/">ChatSpace</a>
       </h1>
       </div>
-      <nav class="flex flex-row items-center gap-2">
+      <nav class="flex flex-row items-center gap-2 w-full justify-between">
         {{#if logged_in}}
           <button
             class="rounded-md bg-violet-900 p-2 font-bold duration-300 hover:bg-indigo-400"
           >
             <a href="/profile">PROFILE</a>
-          </button>|
+          </button>
           <button
             class="rounded-md bg-violet-900 p-2 font-bold duration-300 hover:bg-indigo-400"
             id="logout"
