authors added to tag page blogs

--- a/views/tags.handlebars
+++ b/views/tags.handlebars
@@ -20,6 +20,7 @@
                       class="font-bold text-lg mr-4 ml-1 duration-300 hover:text-indigo-200"
                     >{{blog.title}}</h4>
                   </a>
+                  <p class="ml-2">Author: {{user.username}}</p>
                   {{#if blog.tag}}
                     <p class="ml-2">Tag: {{blog.tag}}</p>
                   {{/if}}
