added header text style

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -22,3 +22,7 @@
   object-fit: cover;
   background-image: url(./assets/images/ai-image5.jpg);
 }
+
+.text-shadow {
+  text-shadow: #FC0 1px 0 10px;
+}
