--- a/public/css/style.css
+++ b/public/css/style.css
@@ -762,14 +762,6 @@ video {
   width: 100%;
 }
 
-.w-4 {
-  width: 1rem;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
 .max-w-\[430px\] {
   max-width: 430px;
 }
@@ -1121,6 +1113,10 @@ video {
   padding-bottom: 2rem;
 }
 
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1158,6 +1154,10 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.font-black {
+  font-weight: 900;
 }
 
 .font-bold {
@@ -1266,10 +1266,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.bg-blend-darken {
-  background-blend-mode: darken;
-}
-
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -1327,6 +1323,10 @@ video {
   -o-object-fit: cover;
      object-fit: cover;
   background-image: url(./assets/images/ai-image5.jpg);
+}
+
+.text-shadow {
+  text-shadow: #FC0 1px 0 10px;
 }
 
 .hover\:scale-105:hover {
