--- a/views/partials/chatrooms.handlebars
+++ b/views/partials/chatrooms.handlebars
@@ -1,7 +1,7 @@
 {{#each chatrooms as |chatroom|}}
   <div id="chat{{chatroom.id}}" class="hide">
     {{!-- TEST chatroom title style --}}
-    <h2 class="text-3xl flex justify-start mt-8 py-2 lg:ml-8 ">ChatRoom: {{chatroom.title}}</h2>
+    <h2 class="text-3xl flex justify-start mt-8 py-2 pl-2 lg:ml-8 font-black text-shadow">ChatRoom: {{chatroom.title}}</h2>
     <div class="screen chat-screen">
       <div class="header">
         <div class="logo"></div>
