fixed partial postioning

--- a/views/partials/createBlog.handlebars
+++ b/views/partials/createBlog.handlebars
@@ -1,4 +1,4 @@
-<div class="createBlogForm border-2 m-5 bg-slate-900 text-gray-300 w-3/5 hidden">
+<div class="createBlogForm bg-slate-900 text-gray-300 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 hidden">
       <h3 class="text-center font-bold text-xl mb-1">Create a New Blog</h3>
 
       <form class="form newBlogForm">
